update Footer.css, Footer.jsx and Header.css

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -6,6 +6,10 @@
     border: 1px solid var(--lightgray);
 }
 
+.logoimg{
+    filter: invert(1);
+}
+
 .footer {
     display: flex;
     align-items: center;
